Fix publish