@@ -68,6 +68,15 @@
                         <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.7.0</version>
+                    <configuration>
+                        <release>21</release>
+                        <additionalOptions>--enable-preview</additionalOptions>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
